# electro-retail

./: .env  .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
store/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
store/fixtures/: superuser.json
store/migrations/: 0001_initial.py
